# promptfoo

./: .biomeignore  .ci-trigger  .coderabbit.yaml  .dockerignore  .git-blame-ignore-revs  .gitignore  .gitmodules  .jscpd.json  .mailmap  .npmignore  .npmrc  .prettierignore  .prettierrc.yaml  .promptfoo-scanignore  .release-please-manifest.json  .rubocop.yml  .ruff.toml  .semgrepignore  .swcrc  2534.yml  AGENTIC_SDK_COMPARISON.md  AGENTS.md  ASSET_STORAGE_AUDIT_REPORT.md  ASSET_STORAGE_CONVERSION_SUMMARY.md  ASSET_STORAGE_FINAL_STATUS.md  ASSET_STORAGE_MIGRATION_PLAN.md  ASSET_STORAGE_MIGRATION_PLAN_V2.md  ASSET_STORAGE_README.md  ASSET_STORAGE_SHARING_EXPORT_IMPORT_ANALYSIS.md  AUDIT_RECOMMENDATIONS.md  AZURE_MODELS.md  AZURE_TEST_RESULTS.md  BACKWARDS_COMPATIBILITY_AUDIT.md  BEDROCK-MISSING-MODELS-ANALYSIS.md  BEDROCK-PRICING-QA-REPORT.md  BEDROCK-PRICING-ULTRATHINK-COMPLETE.md  CHANGELOG.md  CHECKNODEVERSION_OPTIMIZATION.md  CITATION.cff  CLAUDE.md  (+362 more)
.agents/: AGENTS.md
.claude/: settings.json
.claude-plugin/: marketplace.json
.cursor/: mcp.json
.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.yml
.docker/: .dockerignore  README.md  api.dockerfile  app.compose.yml
.github/: AGENTS.md  CODEOWNERS  FUNDING.yml  actionlint.yaml  dependabot.yml  promptfoo-code-scan.yaml
.husky/: pre-commit
.jest/: setEnvVars.js
.promptfoo-local/: evalLastWritten  promptfoo.db  promptfoo.yaml
aditya-development/: promptfooconfig.yaml
architecture/: edge-baseline.json  layers.json  package-candidates.json
assets/: README.md
benchmarks/: assertions.bench.ts  json-utils.bench.ts  vector-math.bench.ts
bug-investigation/: ast_test.yaml  bad_assertion.py  comprehensive_test.yaml  debug_test.yaml  dereference_test.yaml  error_test.yaml  promptfooconfig-inline.yaml  promptfooconfig.yaml  providers.yaml  simple-prompt.py  simple-provider.py  smartPythonRunner.ts  test-python-prompts.yaml  test-python-providers-direct.yaml  test-python-providers.yaml  tests.yaml
cameron-redteam/: promptfooconfig.yaml  redteam.yaml  test-eval.yaml
code-scan-action/: AGENTS.md  CHANGELOG.md  README.md  action.yml  package-lock.json  package.json  tsconfig.json  tsconfig.tests.json
coverage/: base.css  block-navigation.js  clover.xml  index.html  prettify.js  sorter.js
custom-plugins/: unverifiable-claims.yaml
deepak/: CSV_CORRECTIONS_SUMMARY.md  README.md  promptfooconfig-comparison.yaml  promptfooconfig-selectbest.yaml  promptfooconfig.yaml  run-tests.sh  selectbest_response.csv  selectbest_response_corrected.csv  validate-csv.py
docs/: REACT_QUERY_MIGRATION.md  dependency-management.md  design-span-events.md  git-workflow.md  improved-provider-warnings.md  llm-tracing-observability-research.md  logging.md  orchestrator-plan.md  pentest-preparation.md  pr-conventions.md  python.md  scheduler-architecture.md  weekly-pr-report-2026-02-01-to-2026-02-08.md  weekly-slides-2026-02-08.html  weekly-slides-2026-02-08.md  weekly-slides-2026-02-08.pptx
drizzle/: 0000_lush_hellion.sql  0001_wide_calypso.sql  0002_tidy_juggernaut.sql  0003_lively_naoko.sql  0004_minor_peter_quill.sql  0004_rare_lord_tyger.sql  0005_silky_millenium_guard.sql  0006_harsh_caretaker.sql  0006_melodic_lyja.sql  0006_tiny_veda.sql  0006_tranquil_darkstar.sql  0007_cloudy_wong.sql  0008_broad_boomer.sql  0009_strong_marten_broadcloak.sql  0010_needy_bishop.sql  0011_moaning_millenium_guard.sql  0012_late_marten_broadcloak.sql  0013_faithful_night_thrasher.sql  0013_previous_dormammu.sql  0014_lazy_captain_universe.sql  0015_zippy_wallop.sql  0016_faithful_mandroid.sql  0016_jazzy_zemo.sql  0016_prompt_management.sql  0016_repo_scans.sql  0017_great_the_fallen.sql  0017_jazzy_thunderbird.sql  0017_kind_starjammers.sql  0017_prompt_features.sql  0017_reflective_praxagora.sql  0017_romantic_hedge_knight.sql  0018_bright_captain_midlands.sql  0018_complex_warlock.sql  0018_fat_vanisher.sql  0019_new_clint_barton.sql  0020_skinny_maverick.sql  0021_mysterious_madelyne_pryor.sql  0022_sleepy_ultimo.sql  0022_square_multiple_man.sql  0023_test_cases_native.sql  (+7 more)
drizzle-mysql/: 0000_sparkling_hulk.sql
evals/: finance-advisor-policy.txt
examples/: AGENTS.md  (+19 more)
examples/ibm-acp/: README.md  agent.py  final_book.txt  gradio app.py  main.py  orchestrator.py  promptfooconfig.yaml  provider.py  pyproject.toml  requirements.txt
examples/redteam-api-top-10/: .env.example  .gitignore  .metadata.yaml  README.md  promptfooconfig.yaml  pyproject.toml
examples/redteam-api-top-10/app/: __init__.py  auth.py  chat_handler.py  config.py  main.py  mcp_client.py  security.py
examples/redteam-api-top-10/app/routers/: __init__.py  auth.py  chat.py  debug.py  legacy.py  products.py
examples/redteam-api-top-10/data/: swag_store.db
examples/redteam-api-top-10/data/policies/: faq.md  return_policy.md  shipping_info.md  sizing_guide.md
examples/redteam-api-top-10/mock_services/: __init__.py  internal.py  promotions.py  router.py  shipping.py  weather.py
examples/redteam-api-top-10/scripts/: seed_database.py
examples/redteam-api-top-10/static/: index.html
python/: .gitignore  README.md  pyproject.toml
python/src/promptfoo/: __init__.py  __main__.py  cli.py
(+12015 files in other folders)
