[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "modelaudit"
version = "0.1.0"
description = "Model file scanning library for detecting malicious code in ML model files"
authors = ["Ian Webster <ian@promptfoo.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/promptfoo/modelaudit"
homepage = "https://github.com/promptfoo/modelaudit"
keywords = ["ai", "ml", "security", "model-scanning", "pickle", "tensorflow", "pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
click = "^8.1.3"
yaspin = "^2.3.0"
pyyaml = "^6.0"
requests = "^2.25.0"
pyyaml = "^6.0"
requests = "^2.25.0"

# Optional dependencies for specific scanners
tensorflow = { version = ">=2.6", optional = true }
h5py = { version = ">=3.1", optional = true }
torch = { version = ">=1.6", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
coverage = "^7.2.7"
mypy = "^1.4.1"
ruff = ">=0.10.0"
types-PyYAML = "^6.0.12.20250516"
types-tensorflow = "^2.18.0.20250516"
pytest-cov = "^6.2.1"

[tool.poetry.extras]
tensorflow = ["tensorflow"]
h5 = ["h5py"]
pytorch = ["torch"]
all = ["tensorflow", "h5py", "torch"]

[tool.poetry.scripts]
modelaudit = "modelaudit.cli:main"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
# Black-compatible formatting

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true
no_implicit_optional = false 