[project]
name = "acp-booksmith-example"
version = "0.1.0"
description = "Multi-agent book writing system using IBM ACP and Promptfoo"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "acp-sdk==1.0.0",
    "fastapi==0.115.0",
    "uvicorn==0.29.0",
    "openai==1.30.1",
    "gradio==4.28.3",
    "reportlab==4.1.0",
    "requests==2.32.3",
]
